update contact page

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,12 +1,16 @@
 <h2>Contact Information</h2>
-<div id="phone">
-	<p><strong>Phone Number: </strong></p>
-	<p>(847) 650-7028</p>
-</div>
-<div id="email">
-	<p><strong>Email: </strong></p>
-	<p>nicholasblock78@gmail.com</p>
-</div>
-<div>
-	<p>You can find links to my LinkedIn and Github pages in the footer below.</p>
+<div id="contact-wrapper">
+	<div id="contact-info">
+		<div id="phone">
+			<h4>Phone Number:</h4>
+			<p>(847) 650-7028</p>
+		</div>
+		<div id="email">
+			<h4>Email:</h4>
+			<p>nicholasblock78@gmail.com</p>
+		</div>
+		<div id="bottom-text">
+			<p>You can find links to my LinkedIn and Github pages in the footer below.</p>
+		</div>
+	</div>
 </div>
