--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -46,33 +46,43 @@
 	</div>
 
 	<div id='personal'>
-		<h3>Personal Projects</h3>
-		<p><em>More coming here soon!</em></p>
-		<p>Currently working on upping my skill level with Rails
-		</p>
-		<ul>
-			<li>
-				<strong><%= link_to 'Eat for Us', "http://eatforus.com", target: "_blank" %></strong>
-				<p>A sustainable food blog</p>
-				<p>Built on Rails</p>
-			</li>
-			<li>
-				<strong><%= link_to 'Friendsgiving', "http://friendsgiving.herokuapp.com", target: "_blank" %></strong>
-				<p>An app I'm currently developing to help me host my first annual Friendsgiving!</p>
-			</li>
-			<li>
-				<strong><%= link_to 'Huddle Up Sports', "https://huddle-up-sports.herokuapp.com/", target: "_blank" %></a></strong>
-				<p>A web app to find sports games around you to play in</p>
-				<p>Built on Rails</p>
-			</li>
-			<li>
-				<strong><%= link_to 'Recipe Overflow', "https://recipe-overflow.herokuapp.com/", target: "_blank" %></strong>
-				<p>Another Rails application. Practice makes perfect!</p>
-			</li>
-			<li>
-				<strong>Paws On Foot</strong>
-				<p>A business I wanted to start back in college</p>
-			</li>
-		</ul>
+		<div>
+			<h3>Personal Projects</h3>
+			<p>Currently working on upping my skill level with Rails</p>
+			<p class="disclaimer">**Disclaimer: <em>Making all of these responsive is currently a top priority. **</em></p>
+			<ul>
+				<li>
+					<strong><%= link_to 'Eat for Us', "http://eatforus.com", target: "_blank" %></strong>
+					<p>A sustainable food blog</p>
+					<p>Built on Rails</p>
+				</li>
+				<li>
+					<strong><%= link_to 'Friendsgiving', "http://friendsgiving.herokuapp.com", target: "_blank" %></strong>
+					<p>An app I'm currently developing to help me host my first annual Friendsgiving!</p>
+				</li>
+				<li>
+					<strong><%= link_to 'Huddle Up Sports', "https://huddle-up-sports.herokuapp.com/", target: "_blank" %></a></strong>
+					<p>A web app to find sports games around you to play in</p>
+					<p>Built on Rails</p>
+				</li>
+				<li>
+					<strong><%= link_to 'Recipe Overflow', "https://recipe-overflow.herokuapp.com/", target: "_blank" %></strong>
+					<p>Another Rails application. Practice makes perfect!</p>
+				</li>
+			</ul>
+		</div>
+		<div>
+			<p><em>These are coming soon! As I build my new projects, I always try to learn some new code to incorporate into my sites. Fun, challenging, and exciting!</em></p>
+			<ul>
+				<li>
+					<strong>Paws On Foot</strong>
+					<p>A business I wanted to start back in college</p>
+				</li>
+				<li>
+					<strong>Bear's Burgers</strong>
+					<p>A restaurant slash food truck I'd love to run someday</p>
+				</li>
+			</ul>
+		</div>
 	</div>
 </div>
