--- a/source/QA.html.erb
+++ b/source/QA.html.erb
@@ -6,6 +6,14 @@
 			<p>My two role models are Steve Jobs and Robin Williams. These two men are a few of the most influential in the history of our country, even the world. I’ve spent my life trying to find the balance between their eccentric personalities – a perfect mix between Steve’s “go get ‘em” leadership with Robin’s humor and compassion.</p>
 		</li>
 		<li>
+			<h3>Tell us one of your quirks.</h3>
+			<p>As a kid, I was too impatient to let my pizza cool out of the oven and would always burn my mouth. To remedy this, I started putting grapes on my pizza to cool it down in my mouth instead of just waiting!</p>
+		</li>
+		<li>
+			<h3>What's your favorite sports team?</h3>
+			<p>This one's easy --  Da Chicago Bears hands down! Having played football in high school and some in college, I have some extra love for my Monsters of the Midway.</p>
+		</li>
+		<li>
 			<h3>What are some of your favorite quotes?</h3>
 			<p>"The strongest oak of the forest is not the one that is protected from the storm and hidden from the sun. It’s the one that stands in the open where it is compelled to struggle for its existence against the wind and rains and the scorching sun." - Napoleon Hill</p>
 		</li>
