update about me

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -8,7 +8,7 @@
 		eager to inspire and change the world <br />
 		one line of code at a time."</em></h4>
 	<h3>Who am I?</h3>
-
+	<p>I strive to live life to its fullest day in and day out. I work hard. I'm smart, energetic, and almost always the happiest guy in the room. I'm a problem solver constantly striving for better solutions. I'm curious to the core; exploring is in my DNA. At times, I compare myself to a sponge, simply soaking up all I can possibly learn. I pride myself on having a high emotional intelligence and using that to help others to the best of my ability. I'm a jack of all trades who will never stop chasing my best self. </p>
 	<h3>Inspiration</h3>
 	<p>Losing over 120 pounds and keeping it off. What an incredible difference it's made in my life! I hope some of my work will help enable others acheive the same results and happiness.</p>
 	<h3>Why coding?</h3>
