Add in goldenrod borders

--- a/source/experiences.html.erb
+++ b/source/experiences.html.erb
@@ -1,9 +1,9 @@
+<h2>Experiences &amp; Education</h2>
 <div class="buttons">
 	<button class="experiences">Experiences</button>
 	<button class="education">Education</button>
 </div>
 <div id="experiences">
-<h2>Experiences</h2>
 	<section>
 		<div class="left">
 			<div class="logo">
