--- a/source/stylesheets/_about.scss
+++ b/source/stylesheets/_about.scss
@@ -7,9 +7,11 @@ div#about {
 	}
 
 	div#about-img {
-		width: 100%;
+		border-top: 2px solid goldenrod;
 		display: flex;
 		justify-content: center;
+		margin-top: 1%;
+		width: 100%;
 
 		img {
 			box-shadow: 3px 3px 5px gray;
@@ -17,6 +19,7 @@ div#about {
 			height: 200px;
 			text-align: center;
 			margin: 0 auto;
+			margin-top: 1%;
 		}	
 	}
 
