--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -8,39 +8,50 @@
 
 		<h3><span>Team</span> Projects</h3>
 		<section>
-			<div class="lefty">
-				<img src="images/recipe.png" alt="Recip-E Logo"/>
+			<div class="top-wrapper">
+				<div class="lefty">
+					<img src="images/recipe.png" alt="Recip-E Logo"/>
+				</div>
+				<div class="righty">
+					<h4><strong>Recip-E</strong></h4>
+					<p>Dev Bootcamp's Final Project</p>
+					<p>Check it out on the Google Play store <a href="https://play.google.com/store/apps/details?id=com.ionicframework.recipefrontend129174&hl=en">here</a>!</p>
+					<ul>
+						<li>Goal to create a cross-platform mobile first app in a week with a team unfamiliar with Angular and Ionic</li>
+						<li>Operated in both front end and back end capacity. Coordinated categories for organizing ingredients</li>
+						<li>Created keynote presentation for the pitch at graduation</li>
+					</ul>
+				</div>
 			</div>
-			<div class="righty">
-				<h4><strong>Recip-E</strong></h4>
-				<p>Dev Bootcamp's Final Project</p>
-				<p>Check it out on the Google Play store <a href="https://play.google.com/store/apps/details?id=com.ionicframework.recipefrontend129174&hl=en">here</a>!</p>
-				<ul>
-					<li>Goal to create a cross-platform mobile first app in a week with a team unfamiliar with Angular and Ionic</li>
-					<li>Operated in both front end and back end capacity. Coordinated categories for organizing ingredients</li>
-					<li>Created keynote presentation for the pitch at graduation</li>
-				</ul>
-			</div>
-		</section>
-		<section>
-			<div class="lefty">
-				<%= image_tag 'pharaoh.jpg' %>
-			</div>
-			<div class="righty">
-				<h4><strong>Pharoah</strong></h4>
-				<p>The Creative Circus's Final Project</p>
-				<ul>
-					<li>Team of four Copywriters and Graphic Designers designed a playable board game within a week from scratch</li>
-				</ul>
+			<div class="bottom-wrapper">
+			<div>
+				<iframe width="260" height="175" src="https://www.youtube.com/embed/NGpBB9mxglo" frameborder="0" allowfullscreen></iframe>
+				</div>
 			</div>
 		</section>
 		<section>
-			<div class="lefty">
-				<iframe width="260" height="175" src="https://www.youtube.com/embed/sVS7KIPuMYk" frameborder="0" allowfullscreen></iframe>
+			<div class="top-wrapper">
+				<div class="lefty">
+					<%= image_tag 'pharaoh.jpg' %>
+				</div>
+				<div class="righty">
+					<h4><strong>Pharoah</strong></h4>
+					<p>The Creative Circus's Final Project</p>
+					<ul>
+						<li>Team of four Copywriters and Graphic Designers designed a playable board game within a week from scratch</li>
+					</ul>
+				</div>
 			</div>
-			<div class="righty">
-				<h4><strong>Video Week @ The Circus</strong></h4>
-				<p>Our prompt was a 3 min horror video that including a specific name and a cane prop</p>
+		</section>
+		<section>
+			<div class="top-wrapper">
+				<div class="lefty">
+					<iframe width="260" height="175" src="https://www.youtube.com/embed/sVS7KIPuMYk" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="righty">
+					<h4><strong>Video Week @ The Circus</strong></h4>
+					<p>Our prompt was a 3 min horror video that including a specific name and a cane prop</p>
+				</div>
 			</div>
 		</section>
 	</div>
