fix styling differences on experience page

--- a/source/stylesheets/_experiences.scss
+++ b/source/stylesheets/_experiences.scss
@@ -18,7 +18,7 @@ div#experiences {
     height: 200px;
     margin: 0 0 10px 0;
     width: 100%;
-    border-bottom: 2px solid goldenrod;
+    border-top: 2px solid goldenrod;
     padding-bottom: 20px;
 
     div.left {
