add pharaoh pics

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -42,6 +42,10 @@
 					</ul>
 				</div>
 			</div>
+			<div class="bottom-wrapper">
+				<%= image_tag 'pharaoh-cards.jpg' %>
+				<%= image_tag 'pharaoh-closeup.jpg' %>
+			</div>
 		</section>
 		<section>
 			<div class="top-wrapper">
