Factor out border color into colors variable scss

--- a/source/stylesheets/_about.scss
+++ b/source/stylesheets/_about.scss
@@ -7,7 +7,7 @@ div#about {
 	}
 
 	div#about-img {
-		border-top: 2px solid goldenrod;
+		border-top: 2px solid $borders;
 		display: flex;
 		justify-content: center;
 		margin-top: 1%;
