--- a/source/stylesheets/_skills.scss
+++ b/source/stylesheets/_skills.scss
@@ -1,5 +1,5 @@
 div#skills {
-	border-top: 2px solid goldenrod;
+	border-top: 2px solid $borders;
 	text-align: left;
 	display: flex;
 	flex-direction: column;
