--- a/source/stylesheets/_contact.scss
+++ b/source/stylesheets/_contact.scss
@@ -1,7 +1,7 @@
 div#contact-wrapper {
 
 	#contact-info {
-		border-top: 2px solid goldenrod;
+		border-top: 2px solid $borders;
 		margin-top: 1%;
 		padding-top: 1%;
 
