--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -9,24 +9,14 @@
 			<li>CSS3</li>
 			<li>Sass</li>
 			<li>jQuery and AJAX</li>
-			<li>Agile Workflow</li>
 			<li>SQL</li>
-			<li>Sinatra</li>
+			<li>Agile Workflow</li>
 			<li>Heroku</li>
+			<li>Sinatra</li>
 			<li>Active Record</li>
 			<li>Adobe Photoshop</li>
 			<li>Adobe Illustrator</li>
 			<li>iMovie</li>
-		</ul>
-	</div>
-	<div>
-		<h3>Currently studying</h3>
-		<ul>
-			<li>React</li>
-			<li>React Native</li>
-			<li>MERN Stack</li>
-			<li>Google Maps API</li>
-			<li>MiddleMan</li>
 		</ul>
 	</div>
 	<div>
@@ -37,15 +27,25 @@
 		</ul>
 	</div>
 	<div>
+		<h3>Currently studying</h3>
+		<ul>
+			<li>MiddleMan</li>
+			<li>React &amp; React Native</li>
+			<li>MERN Stack</li>
+			<li>Google Maps API</li>
+			<li>Webpack</li>
+		</ul>
+	</div>
+	<div>
 		<h3>On the Docket</h3>
 		<ul>
 			<li>node.js</li>
-			<li>Gulp</li>
+			<li>Haml and/or Pug (formerly Jade)</li>
+			<li>Social Media APIs</li>
 			<li>Coffescript</li>
+			<li>Gulp</li>
 			<li>Modernizr</li>
 			<li>less</li>
-			<li>Haml</li>
-			<li>Social Media APIs</li>
 		</ul>
 	</div>
 </div>
