update personal work page

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -68,8 +68,8 @@
 			<ul>
 				<li>
 					<strong><%= link_to 'Eat for Us', "http://eatforus.com", target: "_blank" %></strong>
-					<p>A sustainable food blog</p>
-					<p>Built on Rails</p>
+					<p>A sustainable food blog with a Farmer's Market Locator</p>
+					<p>Built on Rails using the Google Maps API</p>
 				</li>
 				<li>
 					<strong><%= link_to 'Friendsgiving', "http://friendsgiving.herokuapp.com", target: "_blank" %></strong>
@@ -86,7 +86,7 @@
 				</li>
 			</ul>
 		</div>
-		<div>
+		<div id="coming-soon">
 			<p><em>These are coming soon! As I build my new projects, I always try to learn some new code to incorporate into my sites. Fun, challenging, and exciting!</em></p>
 			<ul>
 				<li>
@@ -96,6 +96,7 @@
 				<li>
 					<strong>Bear's Burgers</strong>
 					<p>A restaurant slash food truck I'd love to run someday</p>
+					<%= image_tag 'BearsBurgersLogo.png' %>
 				</li>
 			</ul>
 		</div>
