update work page again

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -72,6 +72,11 @@
 					<p>Built on Rails using the Google Maps API</p>
 				</li>
 				<li>
+					<strong><%= link_to 'Recipe Overflow', "https://recipe-overflow.herokuapp.com/", target: "_blank" %></strong>
+					<p>Another Rails application built around food</p>
+					<p>Built using the Spoonacular API</p>
+				</li>
+				<li>
 					<strong><%= link_to 'Friendsgiving', "http://friendsgiving.herokuapp.com", target: "_blank" %></strong>
 					<p>An app I'm currently developing to help me host my first annual Friendsgiving!</p>
 				</li>
@@ -79,10 +84,6 @@
 					<strong><%= link_to 'Huddle Up Sports', "https://huddle-up-sports.herokuapp.com/", target: "_blank" %></a></strong>
 					<p>A web app to find sports games around you to play in</p>
 					<p>Built on Rails</p>
-				</li>
-				<li>
-					<strong><%= link_to 'Recipe Overflow', "https://recipe-overflow.herokuapp.com/", target: "_blank" %></strong>
-					<p>Another Rails application. Practice makes perfect!</p>
 				</li>
 			</ul>
 		</div>
