add block's blog to the project

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -98,6 +98,9 @@
 					<strong>Bear's Burgers</strong>
 					<p>A restaurant slash food truck I'd love to run someday</p>
 					<%= image_tag 'BearsBurgersLogo.png' %>
+				</li><li>
+					<strong>Block's Blog</strong>
+					<p>A series of articles I'm going to post about my trials and tribulations as a budding young develope</p>
 				</li>
 			</ul>
 		</div>
