--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -17,6 +17,7 @@
 			<li>Adobe Photoshop</li>
 			<li>Adobe Illustrator</li>
 			<li>iMovie</li>
+			<li>MiddleMan</li>
 		</ul>
 	</div>
 	<div>
@@ -24,26 +25,24 @@
 		<ul>
 			<li>Angular</li>
 			<li>Ionic</li>
+			<li>Google Maps API</li>
 		</ul>
 	</div>
 	<div>
 		<h3>Currently studying</h3>
 		<ul>
-			<li>MiddleMan</li>
+			<li>Java</li>
 			<li>React &amp; React Native</li>
-			<li>MERN Stack</li>
-			<li>Google Maps API</li>
-			<li>Webpack</li>
 		</ul>
 	</div>
 	<div>
 		<h3>On the Docket</h3>
 		<ul>
 			<li>node.js</li>
+			<li>Webpack</li>
+			<li>MERN Stack</li>
 			<li>Haml and/or Pug (formerly Jade)</li>
 			<li>Social Media APIs</li>
-			<li>Coffescript</li>
-			<li>Gulp</li>
 			<li>Modernizr</li>
 			<li>less</li>
 		</ul>
