--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -10,6 +10,8 @@
 			<li>Sass</li>
 			<li>jQuery and AJAX</li>
 			<li>SQL</li>
+			<li>PostgreSQL</li>
+			<li>sqlite</li>
 			<li>Agile Workflow</li>
 			<li>Heroku</li>
 			<li>Sinatra</li>
