Update skills page again

--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -34,18 +34,22 @@
 		<h3>Currently studying</h3>
 		<ul>
 			<li>Java</li>
-			<li>React &amp; React Native</li>
+			<li>Javascript</li>
 		</ul>
 	</div>
 	<div>
 		<h3>On the Docket</h3>
 		<ul>
+			<li>Python</li>
 			<li>node.js</li>
+			<li>React &amp; React Native</li>
 			<li>Webpack</li>
 			<li>MERN Stack</li>
 			<li>Haml and/or Pug (formerly Jade)</li>
 			<li>Social Media APIs</li>
 			<li>Modernizr</li>
+			<li>Firebase</li>
+			<li>Bootstrap</li>
 			<li>less</li>
 		</ul>
 	</div>
