--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -37,6 +37,12 @@ main {
   padding: 2%;
   // height: 750px;
   width: 70%;
+
+  p {
+    margin: 10px auto;
+    text-align: justify;
+    width:60%;
+  }
 }
 
 main.contact p {
