Update work page

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -77,8 +77,9 @@
 					<p>Built using the Spoonacular API</p>
 				</li>
 				<li>
-					<strong><%= link_to 'Friendsgiving', "http://friendsgiving.herokuapp.com", target: "_blank" %></strong>
-					<p>An app I'm currently developing to help me host my first annual Friendsgiving!</p>
+					<strong><%= link_to 'Fit Kitchen', "http://fit-kitchen.herokuapp.com", target: "_blank" %></strong>
+					<p>An app I'm currently developing to help me learn javascript better along with node.js, express, and Pug for the first time.</p>
+					<p>This app aims to connect your health to your pantry and fridge - bringing it all together in one easy to manage spot. </p>
 				</li>
 				<li>
 					<strong><%= link_to 'Huddle Up Sports', "https://huddle-up-sports.herokuapp.com/", target: "_blank" %></a></strong>
