--- a/source/experiences.html.erb
+++ b/source/experiences.html.erb
@@ -91,7 +91,7 @@
 		</ul>
 		</div>
 	</section>
-	<section>
+	<section id="bottom">
 		<p>Check out some of the older places I've worked at too!</p>
 		<ul>
 			<li>Camp Counselor &amp; Lifeguard at my local JCYS</li>
