--- a/source/stylesheets/_work.scss
+++ b/source/stylesheets/_work.scss
@@ -86,6 +86,7 @@ div#work {
 	#personal {
 
 		#coming-soon {
+			margin-top: 5%;
 
 			img {
 				width: 60px;
@@ -97,6 +98,7 @@ div#work {
 
 				p {
 					margin: 0.5% 0 0.5% 2%;
+					width: 80%;
 				}
 			}
 		}
