--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -66,24 +66,23 @@
 			<ul>
 				<li>
 					<strong><%= link_to 'Eat for Us', "http://eatforus.com", target: "_blank" %></strong>
-					<p>A sustainable food blog with a Farmer's Market Locator</p>
+					<p>A sustainable food blog with an interactive Farmer's Market Locator</p>
 					<p>Built on Rails using the Google Maps API</p>
 				</li>
 				<li>
 					<strong><%= link_to 'Recipe Overflow', "https://recipe-overflow.herokuapp.com/", target: "_blank" %></strong>
-					<p>Another Rails application built around food</p>
-					<p>Built using the Spoonacular API</p>
+					<p>Another Rails application built around food using the Spoonacular API</p>
 				</li>
 				<li>
 					<strong><%= link_to 'Fit Kitchen', "http://fit-kitchen.herokuapp.com", target: "_blank" %></strong>
 					<p>An app I'm currently developing to help me learn javascript better along with node.js, express, and Pug for the first time.</p>
 					<p>This app aims to connect your health to your pantry and fridge - bringing it all together in one easy to manage spot. </p>
 				</li>
-				<li>
+				<!-- <li>
 					<strong><%= link_to 'Huddle Up Sports', "https://huddle-up-sports.herokuapp.com/", target: "_blank" %></a></strong>
 					<p>A web app to find sports games around you to play in</p>
 					<p>Built on Rails</p>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 		<div id="coming-soon">
@@ -92,6 +91,10 @@
 				<li>
 					<strong>Paws On Foot</strong>
 					<p>A business I wanted to start back in college</p>
+				</li>
+				<li>
+					<strong>Huddle Up Sports</strong>
+					<p>A web app to find sports games around you to play in</p>
 				</li>
 				<li>
 					<strong>Bear's Burgers</strong>
