--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -4,7 +4,7 @@
 @import "header";
 
 body {
-  background-color: rgb(238,238,238);
+  background-color: gray;
   font-family: 'Lato', sans-serif;  
 }
 
@@ -30,7 +30,7 @@ body {
 }
 
 main {
-  background-color: rgba(200,200,200,0.7);
+  background-color: silver;
   box-shadow: 0px 0px 10px gray;
   clear: both;
   margin: 2% auto;
