Fix contact page styling

--- a/source/stylesheets/_contact.scss
+++ b/source/stylesheets/_contact.scss
@@ -5,6 +5,12 @@ div#contact-wrapper {
 		margin-top: 1%;
 		padding-top: 1%;
 
+
+		p {
+			text-align: center;
+			text-indent: 0;
+		}
+
 		h4 {
 			margin: 0;
 			margin-left: 30%;
