--- a/source/stylesheets/_work.scss
+++ b/source/stylesheets/_work.scss
@@ -5,7 +5,7 @@ div.buttons {
 	margin-top: 1%;
 
 	button {
-		background-color: rgba(138, 242, 33,0.6);
+		background-color: $nicholas;
 		border: 3px solid $borders;
 		border-radius: 25px;
 		box-shadow: 3px 3px 5px gray;
