--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,17 +1,23 @@
 <footer>
-	<div id="footer-icons">
-		<a href="https://www.linkedin.com/in/nicholasblock78
-		"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" /></a>
-		<a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" /></a>
+	<div id="name">
+		<h1><span>Nicholas</span> Block</h1>
 	</div>
+	
+	<div id="icons">
+		<div id="footer-icons">
+			<a href="https://www.linkedin.com/in/nicholasblock78
+			"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" /></a>
+			<a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" /></a>
+		</div>
 
-	<div id="middleman-credit">
-		<div>
-			<p>Built using MiddleMan</p>
-			<% link_to 'https://middlemanapp.com/', target: '_blank' do %>
-				<%= image_tag 'middleman-logo.svg' %>
-			<% end %>
-			<div id="orange"></div>
+		<div id="middleman-credit">
+			<div>
+				<p>Built using MiddleMan</p>
+				<% link_to 'https://middlemanapp.com/', target: '_blank' do %>
+					<%= image_tag 'middleman-logo.svg' %>
+				<% end %>
+				<div id="orange"></div>
+			</div>
 		</div>
 	</div>
 </footer>
