--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,8 +1,26 @@
 ---
 title: Welcome to the Block
 ---
-<%= image_tag 'welcome-block.svg', class: 'welcome', alt: "Welcome to the Block" %>
+<!-- <%= image_tag 'kiteandi.jpg', class: 'background' %> -->
+<!-- <div class="header">
 
+</div> -->
+<header>
+  <div>
+    <%= image_tag 'welcome-block.svg', class: 'welcome', alt: "Welcome to the Block" %>
+  </div>
+  <div>
+    <%= image_tag 'scrolldown.png', class: 'scroll' %>
+  </div>
+
+</header>
+
+<div class="body">
+    <section>
+      <h2>Hey, I'm Nick.</h2>
+      <h3>I'm a <span id="homepage" class="emphasis">Coder</span></h3>
+    </section>
+</div>
 <br />
 <br />
 <br />
