--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,8 +16,9 @@
 </head>
 
 <body class="<%= page_classes %>">
-  <%= partial "header" %>
   <main>
+
+    <%= partial "navigation" %>
     <%= yield %>
   </main>
   <%= partial "footer" %>
