--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -49,7 +49,11 @@ div.navigation {
 @media screen and (max-width: 800px) {
   body {
     background-color: yellow;
+
+  .scroll {
+    margin-top: 30%;
   }
+}
 
   /* Middle screens */
   @media screen and (max-width: 650px) {
