--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,8 +1,9 @@
 <footer>
 	<div id="name">
 		<h1><span>Nicholas</span> Block</h1>
+		<p>a creative health nut turned curious developer eager to inspire and change the world <em>one line of code at a time</em></p>
 	</div>
-	
+
 	<div id="icons">
 		<div id="footer-icons">
 			<a href="https://www.linkedin.com/in/nicholasblock78
