--- a/source/stylesheets/_footer.scss
+++ b/source/stylesheets/_footer.scss
@@ -1,5 +1,14 @@
 #name {
 	float: left;
+	margin-left: -10%;
+	width: 50%;
+
+	p {
+		text-align: center;
+		margin: 0 auto;
+		padding-left: 25px;
+		width: 400px;
+	}
 }
 
 #icons {
