--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,6 +20,22 @@ title: Welcome to the Block
       <h2>Hey, I'm Nick.</h2>
       <h3>I'm a <span id="homepage" class="emphasis">Coder</span></h3>
     </section>
+    <!-- <section class="mainpage coder">
+      <h3>I'm a Coder.</h3>
+      <p>As a recent graduate of Dev Bootcamp, I can't claim I know everything about Computer Science. However, I can say that during my time at DBC I fell in love with code and the whole process surrounding it. I went from knowing only simple HTML and CSS, to being able to develop fully fledged web apps.</p>
+    </section>
+    <section class="mainpage creator">
+      <h3>I'm a Creator.</h3>
+      <p>Spending a summer in Atlanta at The Creative Circus, an advertising portfolio school, was all I needed to help unleash my creative drive. </p>
+    </section>
+    <section class="mainpage collab">
+      <h3>I'm a Collaborator.</h3>
+      <p>I am fully capable of working alone, but I find the greatest joy when I'm working with others. You can always finds cohesive teams behind the some of the greatest works and ideas of our time. Greatness is rarely achieved alone. </p>
+    </section>
+    <section class="mainpage connect">
+      <h3>I'm a Connector.</h3>
+      <p>I bring people together. I enjoy being able to talk to a wide variety of people and really getting to know them. </p>
+    </section> -->
 </div>
 <br />
 <br />
