--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -6,6 +6,7 @@
 
 	<div id="icons">
 		<div id="footer-icons">
+			Check me out elsewhere on the internet!
 			<a href="https://www.linkedin.com/in/nicholasblock78
 			"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" /></a>
 			<a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" /></a>
