Add resume page and into footer

--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -6,7 +6,8 @@
 
 	<div id="icons">
 		<div id="footer-icons">
-			Check me out elsewhere on the internet!
+			<a href="http://www.nicholasblock.com/resume
+			"><img src="images/resume.png" alt="Resume Logo" /></a>
 			<a href="https://www.linkedin.com/in/nicholasblock78
 			"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" /></a>
 			<a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" /></a>
