Fix link bug on footer link

--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -6,7 +6,7 @@
 
 	<div id="icons">
 		<div id="footer-icons">
-			<a href="http://www.nicholasblock.com/resume
+			<a href="http://www.nicholasblock.com/resume.html
 			"><img src="images/resume.png" alt="Resume Logo" /></a>
 			<a href="https://www.linkedin.com/in/nicholasblock78
 			"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" /></a>
