--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -7,19 +7,31 @@
 			<li>Ruby on Rails</li>
 			<li>HTML5</li>
 			<li>CSS3</li>
+			<li>SQL</li>
 			<li>Sass</li>
 			<li>jQuery and AJAX</li>
-			<li>SQL</li>
 			<li>PostgreSQL</li>
 			<li>sqlite</li>
 			<li>Agile Workflow</li>
 			<li>Heroku</li>
 			<li>Sinatra</li>
 			<li>Active Record</li>
+			<li>MiddleMan</li>
+		</ul>
+	</div>
+	<div class="">
+		<h3>Software Experienced With</h3>
+		<ul>
+			<li>Sumo Logic</li>
+			<li>DB Visualizer</li>
+			<li>Datadog</li>
+			<li>AWS EC2</li>
+			<li>JIRA</li>
+			<li>Google Drive</li>
 			<li>Adobe Photoshop</li>
 			<li>Adobe Illustrator</li>
 			<li>iMovie</li>
-			<li>MiddleMan</li>
+			<li>Slack</li>
 		</ul>
 	</div>
 	<div>
