--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -13,25 +13,26 @@
 			<li>PostgreSQL</li>
 			<li>sqlite</li>
 			<li>Agile Workflow</li>
-			<li>Heroku</li>
 			<li>Sinatra</li>
 			<li>Active Record</li>
 			<li>MiddleMan</li>
 		</ul>
 	</div>
-	<div class="">
+	<div class="skills">
 		<h3>Software Experienced With</h3>
 		<ul>
 			<li>Sumo Logic</li>
 			<li>DB Visualizer</li>
 			<li>Datadog</li>
+			<li>Salesforce</li>
 			<li>AWS EC2</li>
+			<li>Heroku</li>
 			<li>JIRA</li>
 			<li>Google Drive</li>
+			<li>Slack</li>
 			<li>Adobe Photoshop</li>
 			<li>Adobe Illustrator</li>
 			<li>iMovie</li>
-			<li>Slack</li>
 		</ul>
 	</div>
 	<div>
