--- a/source/QA.html.erb
+++ b/source/QA.html.erb
@@ -3,15 +3,15 @@
 	<ul>
 		<li>
 			<h3>Who are your biggest role models?</h3>
-			<p>My two role models are Steve Jobs and Robin Williams. These two men are a few of the most influential in the history of our country, even the world. I’ve spent my life trying to find the balance between their eccentric personalities – a perfect mix between Steve’s “go get ‘em” leadership with Robin’s humor and compassion.</p>
+			<p>My two role models are Steve Jobs and Robin Williams. These two men are a few of the most influential in the history of our country, even the world. I’ve spent my life trying to find the balance between their eccentric personalities – a perfect mix of Steve’s “go get ‘em” leadership with Robin’s humor and compassion.</p>
 		</li>
 		<li>
 			<h3>Tell us one of your quirks.</h3>
-			<p>As a kid, I was too impatient to let my pizza cool out of the oven and would always burn my mouth. To remedy this, I started putting grapes on my pizza to cool it down in my mouth instead of just waiting!</p>
+			<p>As a kid, I was too impatient to let my pizza cool out of the oven and would always burn my mouth. To remedy this, I started putting grapes on my pizza to help cool it down instead of just waiting!</p>
 		</li>
 		<li>
 			<h3>What's your favorite sports team?</h3>
-			<p>This one's easy --  Da Chicago Bears hands down! Having played football in high school and some in college, I have some extra love for my Monsters of the Midway.</p>
+			<p>This one's easy --  Da Chicago Bears hands down! Having played football in high school and some in college, I have some extra love for my Monsters of the Midway. I think Mitch Trubisky could be the next big thing.</p>
 		</li>
 		<li>
 			<h3>What are some of your favorite quotes?</h3>
@@ -19,7 +19,7 @@
 		</li>
 		<li>
 			<h3>What have you been watching on T.V.?</h3>
-			<p>Sunday nights are for football, Walking Dead, and WestWorld.</p>
+			<p>Sunday nights are for football and Game Of Thrones.</p>
 		</li>
 	</ul>
 </div>
