--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -28,6 +28,8 @@
 			<li>AWS EC2</li>
 			<li>Heroku</li>
 			<li>JIRA</li>
+			<li>Postman</li>
+			<li>Microsoft Excel</li>
 			<li>Google Drive</li>
 			<li>Slack</li>
 			<li>Adobe Photoshop</li>
