Add in powerreviews experience and job titles

--- a/source/experiences.html.erb
+++ b/source/experiences.html.erb
@@ -7,6 +7,30 @@
 	<section>
 		<div class="left">
 			<div class="logo">
+				<img src="images/pr-logo.png" alt="PowerReviews Logo" height="110px" />
+			</div>
+			<div class="thumbnails">
+			<% link_to '', id: 'powerreviews' do %>
+				<%= image_tag 'calendar-thumbnail.png' %>
+			<% end %>
+				<% link_to 'http://www.powerreviews.com', target: '_blank' do %>
+					<%= image_tag 'web-logo.png' %>
+				<% end %>
+			</div>
+		</div>
+		<div class="info">
+			<ul>
+				<h3>Technical Support Engineer</h3>
+				<li>Utilized a Salesforce ticket queue to provide support to many popular mid-market clients in a timely manner</li>
+				<li>Worked heavily with Product Feeds and Order Feeds in both CSV and XML formats while using SQL to extract and debug this data</li>
+				<li>Talked to some clients on the phone as needed in order to provide faster and better support</li>
+				<li>NPS score of 4.82/5 from 38 client responses with no score less than 4</li>
+			</ul>
+		</div>
+	</section>
+	<section>
+		<div class="left">
+			<div class="logo">
 				<img src="images/dbclogo.png" alt="Dev Bootcamp Logo" height="40px"/>
 			</div>
 			<div class="thumbnails">
@@ -20,6 +44,7 @@
 		</div>
 		<div class="info">
 			<ul>
+				<h3>Student</h3>
 				<li>19-week intensive coding bootcamp for full stack web development</li>
 				<li>Ruby. Ruby on Rails. Javascript. SQL. Active Record. Sinatra. jQuery. AJAX.</li>
 			</ul>
@@ -41,6 +66,7 @@
 		</div>
 		<div class="info">
 			<ul>
+				<h3>Class Assistant</h3>
 				<li>Prepared appetizers for guests and served alcohol to patrons during classes and parties</li>
 				<li>Instructed patrons on cooking skills during parties while leading a recipe(s) station</li>
 				<li>Assissted leading cooking bootcamps for kids and adults alike</li>
@@ -63,6 +89,7 @@
 		</div>
 		<div class="info">
 			<ul>
+				<h3>Student</h3>
 				<li>Eight week intensive creative advertising bootcamp in Atlanta, GA at one of the best portfolio schools in the country.</li>
 				<li>Creative Teams. Art Direction. Adobe Suite. Creative Strategy.</li>
 				<li>Type. Photo. Video. Board Game Challenge. Portfolio Week.</li>
@@ -85,6 +112,7 @@
 		</div>
 		<div class="info">
 		<ul>
+			<h3>Camp Counselor</h3>
 			<li>Assisted in leading a summer overnight adventure camp with 13 middle school-aged kids</li>
 			<li>Drove 15-passenger van (“Mini Bus”) to various camping sites in Midwest each week</li>
 			<li>Led many outdoor recreational activities, such as hiking and kayaking</li>
@@ -103,8 +131,8 @@
 		</ul>
 	</section>
 </div>
-	
-<div id="education" style="display: none;">	
+
+<div id="education" style="display: none;">
 	<h2>Education</h2>
 		<section>
 			<img src="images/iowa.gif" alt="Iowa Logo" height="60px" />
