--- a/source/skills.html.erb
+++ b/source/skills.html.erb
@@ -29,6 +29,7 @@
 			<li>Heroku</li>
 			<li>JIRA</li>
 			<li>Postman</li>
+			<li>Wordpress</li>
 			<li>Microsoft Excel</li>
 			<li>Google Drive</li>
 			<li>Slack</li>
