Update work page

--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -65,7 +65,7 @@
 			<h3>Personal Projects</h3>
 			<ul>
 				<li>
-					<strong><%= link_to 'Eat for Us', "http://eatforus.com", target: "_blank" %></strong>
+					<strong><%= link_to 'Eat for Us', "http://eatforus.herokuapp.com", target: "_blank" %></strong>
 					<p>A sustainable food blog with an interactive Farmer's Market Locator</p>
 					<p>Built on Rails using the Google Maps API</p>
 				</li>
