update main logo

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,6 +7,7 @@ title: Welcome to the Block
 </div> -->
 <header>
   <div>
+    <image src="https://res.cloudinary.com/blockscloud/image/upload/v1543379688/Layer_1_k8e8r0.svg" class="welcome" alt: "Welcome to the Block"/>
     <%= image_tag 'welcome-block.svg', class: 'welcome', alt: "Welcome to the Block" %>
   </div>
   <div>
