--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -48,7 +48,7 @@ http {
       }
 
       alias /app/dist/;
-      try_files $uri /index.html;
+      try_files $uri /build/index.html;
     }
 
     root /app/dist; # path to your app
